{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "MovementPlayerInput",
            "id": "21800b80-f063-42e3-96e2-1b1ed0d71874",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "10620378-fe1e-47e0-b6c3-ed4b4b02adf6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "604b124f-49e4-4f71-a434-b3b8072f37eb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "2ba978d7-e57c-42dd-9a93-2e9044526d45",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "efd26bda-ed64-4048-ae80-86ca63c42159",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookAround",
                    "type": "Value",
                    "id": "c23858f0-b9ae-4602-8b7a-114f05386973",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "aa6a54b7-6358-4729-95ec-d668af3ab665",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a101ce83-e2f2-4601-a191-53d5e2736439",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ada94ea1-f029-4dcb-bc29-d13c48542b39",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "90aa1035-dec0-4cdc-afcf-f42782e424ef",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9d1480e1-3889-4b7d-b657-c221efc60020",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "230145ac-fce5-403c-a8ed-eedd8b8f4e2b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a5a2e28-d5f0-46b8-8f5b-e721e0e15236",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc9c78c4-5273-4ccf-b0e4-98c571e9ae64",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b163c02e-aa81-429f-a553-9d68faf098ac",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AttackPlayerInput",
            "id": "896aad7f-d2d4-4ae0-ba91-038006fd0946",
            "actions": [
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "e7fb65aa-eb1d-4725-99b0-2c33f06dc2b0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StrongPunch",
                    "type": "Button",
                    "id": "ce00a670-eb0d-4628-a9d1-4a5ea62c2b4c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LightPunch",
                    "type": "Button",
                    "id": "98dd7eb5-7c4c-448f-93a9-1f331aac7903",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "36a119db-2e89-4e01-8a46-a0584ece8b67",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d7f3b283-b72f-4197-bf30-35412390e1ed",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9089466a-b0f8-49b4-aead-7fc296e2c06a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "StrongPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efa025dd-140e-4a10-9632-5072c628e837",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap(duration=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "LightPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc1ff13c-139e-4bd4-82c3-1ac45aba40da",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InteractPlayerInput",
            "id": "40f071d4-aa21-4431-be1d-312d693a7798",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "5711607f-e77b-4e31-bd80-f5b4865ce2cc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0917a04e-13e4-479c-b5c0-77bef7f4a569",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}